--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="js/stock.js"></script>
-    <script src="js/codigo.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/slide.js"></script>
 </body>
 </html>
